--- a/mvc-web-app/Views/Home/Index.cshtml
+++ b/mvc-web-app/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Welcomen</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
-    <h3>Blogs are NOT fun</h3>
+    <h3>Some Dates from the database</h3>
     @foreach (var u in Model.Urls)
     {
         @u <br />
