commited from wsl termal window)

--- a/mvc-web-app/Views/Home/Index.cshtml
+++ b/mvc-web-app/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome! - this file edited from WSL!</h1>
+    <h1 class="display-4">Welcome! - this file edited from WSL! Edited more.</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
     <h3>Some Dates from the database</h3>
